create null.css and js-file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,42 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Металобаза</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script defer src="https://code.jquery.com/jquery-3.6.4.js"
+		integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+	<script defer src="js/script.js"></script>
 </head>
 
 <body>
+	<div class="wrapper">
+		<header class="header">
 
+		</header>
+		<main class="main">
+			<section class="section-main-sale main-sale">
+
+			</section>
+			<section class="section-business business">
+
+			</section>
+			<section class="section-roofing-cost roofing-cost">
+
+			</section>
+			<section class="section-catalog catalog">
+
+			</section>
+			<section class="section-question question">
+
+			</section>
+			<section class="section-clients clients">
+
+			</section>
+		</main>
+		<footer class="footer">
+
+		</footer>
+	</div>
 </body>
 
 </html>
