--- a/index.html
+++ b/index.html
@@ -15,7 +15,48 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
+			<div class="header__container">
+				<div class="header-grid">
+					<div class="header__logo">
+						<img src="img/1-header-footer/logo.png" alt="">
+					</div>
+					<div class="header__vertical-span">
 
+					</div>
+					<div class="header__location">
+						<div class="header__location-text">
+							<p class="location-text">Санкт-Петербург,</p>
+							<p class="location-text">Горелово,</p>
+							<p class="location-text">Волхонское шоссе, 6,</p>
+						</div>
+					</div>
+					<div class="header__price-list">
+						<div class="header__price-list-circle orange-gradient">
+							<span>pdf</span>
+						</div>
+						<div class="header__price-list-text">
+							Скачать прайс-лист
+						</div>
+					</div>
+					<div class="header__catalog orange-gradient">
+						<span>Посмотреть каталог товаров</span>
+					</div>
+					<div class="header__question">
+						<div class="header__question-text">
+							Задайте вопрос <span>online</span>
+						</div>
+						<div class="header__question-row">
+							<img src="img/1-header-footer/WhatsApp.svg" alt="">
+							<img src="img/1-header-footer/Telegram.svg" alt="">
+							<span><img src="img/1-header-footer/Vk.svg" alt=""></span>
+						</div>
+					</div>
+					<div class="header__tel text-gray-gradient ">
+						+7 (812) 325-50-55
+						<p>Перезвоним Вам</p>
+					</div>
+				</div>
+			</div>
 		</header>
 		<main class="main">
 			<section class="section-main-sale main-sale">
