--- a/index.html
+++ b/index.html
@@ -18,42 +18,47 @@
 			<div class="header__container">
 				<div class="header-grid">
 					<div class="header__logo">
-						<img src="img/1-header-footer/logo.png" alt="">
-					</div>
-					<div class="header__vertical-span">
+						<a href="#"><img src="img/1-header-footer/logo.png" alt=""></a>
+						<div class="header__vertical-span">
 
-					</div>
-					<div class="header__location">
-						<div class="header__location-text">
-							<p class="location-text">Санкт-Петербург,</p>
-							<p class="location-text">Горелово,</p>
-							<p class="location-text">Волхонское шоссе, 6,</p>
+						</div>
+						<div class="header__location">
+							<div class="header__location-text">
+								<p>Санкт-Петербург,</p>
+								<p>Горелово,</p>
+								<p>Волхонское шоссе, 6,</p>
+							</div>
 						</div>
 					</div>
 					<div class="header__price-list">
-						<div class="header__price-list-circle orange-gradient">
+						<a href="#" class="header__price-list-circle orange-gradient">
 							<span>pdf</span>
-						</div>
-						<div class="header__price-list-text">
+						</a>
+						<a href="#" class="header__price-list-text">
 							Скачать прайс-лист
-						</div>
+						</a>
 					</div>
-					<div class="header__catalog orange-gradient">
+					<a href="#" class="header__catalog orange-gradient">
 						<span>Посмотреть каталог товаров</span>
-					</div>
+					</a>
 					<div class="header__question">
-						<div class="header__question-text">
-							Задайте вопрос <span>online</span>
-						</div>
+						<a href="#" class="header__question-text">
+							Задайте вопрос online
+						</a>
 						<div class="header__question-row">
-							<img src="img/1-header-footer/WhatsApp.svg" alt="">
-							<img src="img/1-header-footer/Telegram.svg" alt="">
-							<span><img src="img/1-header-footer/Vk.svg" alt=""></span>
+							<a href=""><img src="img/1-header-footer/WhatsApp.svg" alt=""></a>
+							<a href=""><img src="img/1-header-footer/Telegram.svg" alt=""></a>
+							<a href=""><img src="img/1-header-footer/Vk.svg" alt=""></a>
 						</div>
 					</div>
-					<div class="header__tel text-gray-gradient ">
-						+7 (812) 325-50-55
-						<p>Перезвоним Вам</p>
+					<div class="header__tel">
+						<a href="#" class="text-gray-gradient">+7 (812) 325-50-55</a>
+						<p><a href="#" class="text-gray-gradient">Перезвоним Вам</a></p>
+						<div class="header__question-row d-none">
+							<a href="#"><img src="img/1-header-footer/small button/App.png" alt=""></a>
+							<a href="#"><img src="img/1-header-footer/small button/Telegram.png" alt=""></a>
+							<a href="#"><img src="img/1-header-footer/small button/vk.png" alt=""></a>
+						</div>
 					</div>
 				</div>
 			</div>
