footer last version

--- a/index.html
+++ b/index.html
@@ -84,7 +84,42 @@
 			</section>
 		</main>
 		<footer class="footer">
-
+			<div class="footer__container">
+				<div class="footer-grid">
+					<div class="footer__logo">
+						<a href="#"><img src="img/1-header-footer/logo.png" alt=""></a>
+					</div>
+					<div class="footer__price-list">
+						<a href="#" class="footer__price-list-circle orange-gradient">
+							<span>pdf</span>
+						</a>
+						<a href="#" class="footer__price-list-text">
+							Скачать прайс-лист
+						</a>
+					</div>
+					<a href="#" class="footer__catalog orange-gradient">
+						<span>Посмотреть каталог товаров</span>
+					</a>
+					<div class="footer__question">
+						<a href="#" class="footer__question-text">
+							Задайте вопрос online
+						</a>
+						<div class="footer__question-row">
+							<a href=""><img src="img/1-header-footer/WhatsApp.svg" alt=""></a>
+							<a href=""><img src="img/1-header-footer/Telegram.svg" alt=""></a>
+							<a href=""><img src="img/1-header-footer/Vk.svg" alt=""></a>
+						</div>
+					</div>
+					<div class="footer__tel">
+						<a href="#" class="text-gray-gradient">+7 (812) 325-50-55</a>
+						<p><a href="#" class="text-gray-gradient">Перезвоним Вам</a></p>
+					</div>
+				</div>
+				<div class="copyright">
+					<p>Политика конфиденциальности</p>
+					<p>Copyright © 2010 - 2022 | ООО «СУПЕРМЕТ»</p>
+				</div>
+			</div>
 		</footer>
 	</div>
 </body>
