--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="header__tel">
 						<a href="#" class="text-gray-gradient">+7 (812) 325-50-55</a>
 						<p><a href="#" class="text-gray-gradient">Перезвоним Вам</a></p>
-						<div class="header__question-row d-none">
+						<div class="header__question-row display-none">
 							<a href="#"><img src="img/1-header-footer/small button/App.png" alt=""></a>
 							<a href="#"><img src="img/1-header-footer/small button/Telegram.png" alt=""></a>
 							<a href="#"><img src="img/1-header-footer/small button/vk.png" alt=""></a>
