--- a/index.html
+++ b/index.html
@@ -65,7 +65,46 @@
 		</header>
 		<main class="main">
 			<section class="section-main-sale main-sale">
-
+				<div class="main-sale__container">
+					<div class="main-sale__content">
+						<h1 class="main-sale__title">
+							<p class="main-sale__color-black">ПРОДАЖА кровельных</p>
+							<p class="main-sale__color-black">материалов <span
+									class="text-orange-gradient">сдоставкой</span>
+							</p>
+							<p class="text-orange-gradient">по Санкт-Петербургу</p>
+							<p><span class="text-orange-gradient">и области</span> в день заказа</p>
+						</h1>
+						<h2 class="main-sale__sub-title">
+							<p>За 1 минуту пройдите тест и <span class="text-orange-gradient">рассчитайте</span>
+							</p>
+							<p><span class="text-orange-gradient">стоимость кровли</span> под ваш объект</p>
+							<p>
+								с точностью 97% и получите подарки
+							</p>
+						</h2>
+						<a href="#" class="main-sale__button orange-gradient">
+							<span>РАССЧИТАТЬ СТОИМОСТЬ МАТЕРИАЛОВ</span>
+						</a>
+						<img class="position-absolute" src="img/2-main-sale/stuka.png" alt="">
+						<img class="media-main" src="img/2-main-sale/media main.png" alt="">
+						<div class="main-sale__group">
+							<a href="#" class="main-sale__item orange-gradient">
+								<img src="img/2-main-sale/Vector.png" alt="">
+								<div class="main-sale__item-text">Произвести расчет</div>
+							</a>
+							<a href="#" class="main-sale__item orange-gradient">
+								<img src="img/2-main-sale/Layer 2.png" alt="">
+								<div class="main-sale__item-text">Скачать прайс-лист</div>
+							</a>
+							<a href="#" class="main-sale__item orange-gradient">
+								<img src="img/2-main-sale/tel.png" alt="">
+								<div class="main-sale__item-text">Перезвоните
+									мне</div>
+							</a>
+						</div>
+					</div>
+				</div>
 			</section>
 			<section class="section-business business">
 
