--- a/index.html
+++ b/index.html
@@ -107,7 +107,89 @@
 				</div>
 			</section>
 			<section class="section-business business">
+				<div class="business__container">
+					<div class="business__row-text">
+						<h2 class="business__title text-orange-gradient">
+							<p>О НАС</p>
+							<p>и НАШЕМ БИЗНЕСЕ</p>
+						</h2>
+						<div class="business__text">Каждому клиенту мы гарантируем взаимовыгодные условия
+							сотрудничества. Мы дорожим своими заказчиками, поэтому брак и низкокачественный металл
+							никогда не поступают на склады предприятия. С нами – надежно, выгодно и безопасно!</div>
+					</div>
+					<div class="business-cards">
+						<div class="business-card">
+							<div class="business-card__image">
+								<img src="img/3-business/busi1.png" alt="">
+							</div>
+							<h3 class="business-card__title text-gray-gradient">
+								Постоянное наличие
+							</h3>
+							<div class="business-card__text">
+								Прямая работа с производителем обеспечивает постоянное наличие всех видом
+								металлопроката
+							</div>
+						</div>
+						<div class="business-card">
+							<div class="business-card__image">
+								<img src="img/3-business/busi2.png" alt="">
+							</div>
+							<h3 class="business-card__title text-gray-gradient">
+								Собственный автопарк
+							</h3>
+							<div class="business-card__text">
+								Автомобили грузоподъемностью от 1.5 до 20 тонн. Всегда быстрая доставка.
+							</div>
+						</div>
+						<div class="business-card">
+							<div class="business-card__image">
+								<img src="img/3-business/busi3.png" alt="">
+							</div>
+							<h3 class="business-card__title text-gray-gradient">
+								Объемы поставок
+							</h3>
+							<div class="business-card__text">
+								Собственная служба доставки, гаранатирует вам поставку материалов на объект в
+								кратчайшие сроки.
+							</div>
+						</div>
+						<div class="business-card">
+							<div class="business-card__image">
+								<img src="img/3-business/busi4.png" alt="">
+							</div>
+							<h3 class="business-card__title text-gray-gradient">
+								Справедливая цена
+							</h3>
+							<div class="business-card__text">
+								Собственные ресурсы и транспорт позволяют снижать стоимость.
+							</div>
+						</div>
+						<div class="business-card">
+							<div class="business-card__image">
+								<img src="img/3-business/busi5.png" alt="">
+							</div>
+							<h3 class="business-card__title text-gray-gradient">
+								Обработка заявки < 30 минут </h3>
+									<div class="business-card__text">
+										Отдел продаж, насчитывающий более 80 сотрудников, не оставит вашу заявку без
+										внимания.
+									</div>
+						</div>
+						<div class="business-card">
+							<div class="business-card__image">
+								<img src="img/3-business/busi6.png" alt="">
+							</div>
+							<h3 class="business-card__title text-gray-gradient">
+								Погрузка без очередей
+							</h3>
+							<div class="business-card__text">
+								Развитая складская логистика позволяет отгружать продукцию всегда без очередей.
+							</div>
+						</div>
+					</div>
 
+				</div>
+				<img class="position-absolute" src="img/3-business/stuka2.png" alt="">
 			</section>
 			<section class="section-roofing-cost roofing-cost">
 
