--- a/index.html
+++ b/index.html
@@ -198,7 +198,42 @@
 
 			</section>
 			<section class="section-question question">
-
+				<div class="question__container">
+					<div class="question__body">
+						<div class="question-img-tree"><img src=" img/6-question/tree.png" alt=""></div>
+						<div class="question-content__img-girl"><img src="img/6-question/girl.png" alt=""></div>
+						<img src="img/6-question/element.png" alt="" class="element-bottom">
+						<div class="question__content">
+							<div class="question__content-row">
+								<div class="question__content-block"></div>
+								<div class="question-content__inside">
+									<h2 class="question-content__title">
+										ЕСТЬ ВОПРОСЫ?
+									</h2>
+									<h2 class="question-content__sub-title">
+										Если у Вас есть вопросы или требуется помощь в подборе кровельных
+										материалов,
+										то оставьте свои данные, мы свяжемся с Вами и проконсультируем.
+									</h2>
+									<a href="#" class="question-content__button orange-gradient"><span>Получить
+											консультацию</span></a>
+									<h3 class="question-content__description-row">
+										<div class="question-content__description">
+											<p>или напишите нам</p>
+											<p>в мессенджер</p>
+										</div>
+										<div class="question-content__description-images">
+											<a href="#"><img src="img/6-question/WA.png" alt=""></a>
+											<a href="3"><img src="img/6-question/Tg.png" alt=""></a>
+										</div>
+									</h3>
+								</div>
+							</div>
+							<img src="img/6-question/bottom-element.png" class="position-absolute" alt="">
+						</div>
+					</div>
+				</div>
+				<img class="position-absolute" src="img/6-question/bottom-element.png" alt="">
 			</section>
 			<section class="section-clients clients">
 
