--- a/index.html
+++ b/index.html
@@ -204,11 +204,15 @@
 						<div class="question-content__img-girl"><img src="img/6-question/girl.png" alt=""></div>
 						<img src="img/6-question/element.png" alt="" class="element-bottom">
 						<div class="question__content">
+							<img src="img/6-question/element.png" alt="" class="element-top">
 							<div class="question__content-row">
-								<div class="question__content-block"></div>
+								<div class="question__content-block">
+									<img src="img/6-question/girl.png" alt="">
+								</div>
 								<div class="question-content__inside">
 									<h2 class="question-content__title">
-										ЕСТЬ ВОПРОСЫ?
+										<p>ЕСТЬ</p>
+										<p>ВОПРОСЫ?</p>
 									</h2>
 									<h2 class="question-content__sub-title">
 										Если у Вас есть вопросы или требуется помощь в подборе кровельных
@@ -229,7 +233,6 @@
 									</h3>
 								</div>
 							</div>
-							<img src="img/6-question/bottom-element.png" class="position-absolute" alt="">
 						</div>
 					</div>
 				</div>
