roofing-cost.css

--- a/index.html
+++ b/index.html
@@ -192,7 +192,94 @@
 				<img class="position-absolute" src="img/3-business/stuka2.png" alt="">
 			</section>
 			<section class="section-roofing-cost roofing-cost">
+				<div class="roofing-cost__container">
+					<h2 class="roofing-cost__title">
+						<p class="text-orange-gradient">Пройдите тест и рассчитайте</p>
+						<p> стоимость кровли под ваш объект</p>
+						<p>с точностью 97%</p>
+					</h2>
+					<div class="roofing-cost__block-grid">
+						<div class="roofing-grid__loading">
+							<div class="roofing__slider">
 
+							</div>
+							<span>Расчет произведен на 15%</span>
+						</div>
+						<div class="roofing-grid__content">
+							<h3 class="roofing__title">
+								<span class="text-orange-gradient">Вопрос 1 из 6:</span> Выберите тип Вашей крыши
+							</h3>
+							<h4 class="roofing__sub-title">
+								Выберите один из вариантов и переходите к следующему вопросу
+							</h4>
+							<div class="roofing__cards">
+								<div class="roofing__card">
+									<img src="img/4-roofing-cost/house-1.png" alt="">
+									<div class="roofing-card-text">Односкатная</div>
+								</div>
+								<div class="roofing__card">
+									<img src="img/4-roofing-cost/house-2.png" alt="">
+									<div class="roofing-card-text">Двускатная</div>
+								</div>
+								<div class="roofing__card">
+									<img src="img/4-roofing-cost/house-3.png" alt="">
+									<div class="roofing-card-text">Четырехскатная вальмовая</div>
+								</div>
+								<div class="roofing__card">
+									<img src="img/4-roofing-cost/house-4.png" alt="">
+									<div class="roofing-card-text">Четырехскатная шатровая</div>
+								</div>
+								<div class="roofing__card">
+									<img src="img/4-roofing-cost/house-5.png" alt="">
+									<div class="roofing-card-text">Мансардная ломаная</div>
+								</div>
+								<div class="roofing__card">
+									<img src="img/4-roofing-cost/house-6.png" alt="">
+									<div class="roofing-card-text">Другая</div>
+								</div>
+							</div>
+						</div>
+						<div class="roofing-grid-cost__man">
+							<div class="roofing-man__img"><img src="img/4-roofing-cost/1 3.png" alt="">
+								<div class="roofing-man__img-text text-orange-gradient">
+									<p>Ответьте на 5 вопросов</p>
+									<p>и получите в конце:</p>
+								</div>
+							</div>
+							<div class="roofing-man-row">
+								<div class="roofing__text-row">
+									<img src="img/4-roofing-cost/lock.svg" alt="">
+									<div class="roofing__text-row-text">
+										<p>Бесплатный расчет стоимости кровли</p>
+										<p>под ваш объект в 3-х вариантах</p>
+									</div>
+								</div>
+								<div class="roofing__text-row">
+									<img src="img/4-roofing-cost/lock.svg" alt="">
+									<div class="roofing__text-row-text">
+										<p>Бесплатный расчет стоимости кровли</p>
+										<p>под ваш объект в 3-х вариантах</p>
+									</div>
+								</div>
+								<div class="roofing__text-row">
+									<img src="img/4-roofing-cost/lock.svg" alt="">
+									<div class="roofing__text-row-text">
+										<p>Бесплатный расчет стоимости кровли</p>
+										<p>под ваш объект в 3-х вариантах</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="roofing-grid-cost__buttons">
+							<a href="#" class="roofing__button gray-gradient">
+								<span>Назад</span>
+							</a>
+							<a href="#" class="roofing__button orange-gradient">
+								<span>Далее</span>
+							</a>
+						</div>
+					</div>
+				</div>
 			</section>
 			<section class="section-catalog catalog">
 
