last-version-animations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="header__container">
 				<div class="header-grid">
 					<div class="header__logo">
-						<a href="#"><img src="img/1-header-footer/logo.png" alt=""></a>
+						<a class="-anim-items" href="#"><img src="img/1-header-footer/logo.png" alt=""></a>
 						<div class="header__vertical-span">
 
 						</div>
@@ -69,7 +69,7 @@
 			<section class="section-main-sale main-sale">
 				<div class="main-sale__container">
 					<div class="main-sale__content">
-						<h1 class="main-sale__title">
+						<h1 class="main-sale__title -anim-items">
 							<p class="main-sale__color-black">ПРОДАЖА кровельных</p>
 							<p class="main-sale__color-black">материалов <span
 									class="text-orange-gradient">сдоставкой</span>
@@ -77,7 +77,7 @@
 							<p class="text-orange-gradient">по Санкт-Петербургу</p>
 							<p><span class="text-orange-gradient">и области</span> в день заказа</p>
 						</h1>
-						<h2 class="main-sale__sub-title">
+						<h2 class="main-sale__sub-title -anim-items -anim-no-hide">
 							<p>За 1 минуту пройдите тест и <span class="text-orange-gradient">рассчитайте</span>
 							</p>
 							<p><span class="text-orange-gradient">стоимость кровли</span> под ваш объект</p>
@@ -85,7 +85,7 @@
 								с точностью 97% и получите подарки
 							</p>
 						</h2>
-						<a href="#" class="main-sale__button orange-gradient">
+						<a href="#" class="main-sale__button orange-gradient -anim-items -anim-no-hide">
 							<span>РАССЧИТАТЬ СТОИМОСТЬ МАТЕРИАЛОВ</span>
 						</a>
 						<img class="position-absolute" src="img/2-main-sale/stuka.png" alt="">
@@ -111,7 +111,7 @@
 			<section class="section-business business">
 				<div class="business__container">
 					<div class="business__row-text">
-						<h2 class="business__title text-orange-gradient">
+						<h2 class="business__title text-orange-gradient -anim-items">
 							<p>О НАС</p>
 							<p>и НАШЕМ БИЗНЕСЕ</p>
 						</h2>
@@ -195,7 +195,7 @@
 			</section>
 			<section class="section-roofing-cost roofing-cost">
 				<div class="roofing-cost__container">
-					<h2 class="roofing-cost__title">
+					<h2 class="roofing-cost__title -anim-items">
 						<p class="text-orange-gradient">Пройдите тест и рассчитайте</p>
 						<p> стоимость кровли под ваш объект</p>
 						<p>с точностью 97%</p>
@@ -285,7 +285,7 @@
 			</section>
 			<section class="section-catalog catalog">
 				<div class="catalog__container">
-					<h2 class="catalog__title text-orange-gradient">
+					<h2 class="catalog__title text-orange-gradient -anim-items">
 						КАТАЛОГ ТОВАРОВ
 					</h2>
 					<div class="catalog__row-buttons">
@@ -1404,7 +1404,9 @@
 				<div class="question__container">
 					<div class="question__body">
 						<div class="question-img-tree"><img src=" img/6-question/tree.png" alt=""></div>
-						<div class="question-content__img-girl"><img src="img/6-question/girl.png" alt=""></div>
+						<div class="question-content__img-girl -anim-items -anim-no-hide"><img
+								src="img/6-question/girl.png" alt="">
+						</div>
 						<img src="img/6-question/element.png" alt="" class="element-bottom">
 						<div class="question__content">
 							<img src="img/6-question/element.png" alt="" class="element-top">
@@ -1413,7 +1415,7 @@
 									<img src="img/6-question/girl.png" alt="">
 								</div>
 								<div class="question-content__inside">
-									<h2 class="question-content__title">
+									<h2 class="question-content__title -anim-items">
 										<p>ЕСТЬ</p>
 										<p>ВОПРОСЫ?</p>
 									</h2>
@@ -1443,7 +1445,7 @@
 			</section>
 			<section class="section-clients clients">
 				<div class="clients__container">
-					<div class="clients__title">
+					<div class="clients__title -anim-items">
 						<p class="text-orange-gradient">ЛУЧШЕ ВСЕГО О НАС</p>
 						<p>РАССКАЖУТ НАШИ КЛИЕНТЫ</p>
 					</div>
@@ -1522,7 +1524,7 @@
 			<div class="footer__container">
 				<div class="footer-grid">
 					<div class="footer__logo">
-						<a href="#"><img src="img/1-header-footer/logo.png" alt=""></a>
+						<a class="-anim-items" href="#"><img src="img/1-header-footer/logo.png" alt=""></a>
 					</div>
 					<div class="footer__price-list">
 						<a href="#" class="footer__price-list-circle orange-gradient">
