--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							Скачать прайс-лист
 						</a>
 					</div>
-					<a href="#" class="header__catalog orange-gradient">
+					<a href="#catalog" class="header__catalog orange-gradient">
 						<span>Посмотреть каталог товаров</span>
 					</a>
 					<div class="header__question">
@@ -283,7 +283,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="section-catalog catalog">
+			<section id="catalog" class="section-catalog catalog">
 				<div class="catalog__container">
 					<h2 class="catalog__title text-orange-gradient -anim-items">
 						КАТАЛОГ ТОВАРОВ
@@ -1534,7 +1534,7 @@
 							Скачать прайс-лист
 						</a>
 					</div>
-					<a href="#" class="footer__catalog orange-gradient">
+					<a href="#catalog" class="footer__catalog orange-gradient">
 						<span>Посмотреть каталог товаров</span>
 					</a>
 					<div class="footer__question">
